# agentorchestrators

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
deploy/docker/: Dockerfile
deploy/kubernetes/base/: configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml
deploy/kubernetes/base/agent-worker/: deployment.yaml  keda-scaledobject.yaml
deploy/kubernetes/base/api/: deployment.yaml  hpa.yaml  service.yaml
deploy/kubernetes/base/nats/: statefulset.yaml
deploy/kubernetes/base/orchestrator/: deployment.yaml  service.yaml
deploy/kubernetes/base/redis/: statefulset.yaml
deploy/kubernetes/base/result-handler/: deployment.yaml
deploy/kubernetes/base/worker/: deployment.yaml  keda-scaledobject.yaml  pdb.yaml
deploy/kubernetes/overlays/development/: kustomization.yaml
deploy/kubernetes/overlays/production/: kustomization.yaml
deploy/kubernetes/overlays/staging/: kustomization.yaml
deploy/prometheus/: prometheus.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/pages/: Agents.tsx  Conversations.tsx  Dashboard.tsx  Files.tsx  Tasks.tsx  Workflows.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  index.ts  input.tsx  progress.tsx  separator.tsx  tabs.tsx  tooltip.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Agents.tsx  Conversations.tsx  Dashboard.tsx  Monitoring.tsx  Settings.tsx  Tasks.tsx  Workflows.tsx  index.ts
frontend/src/stores/: app.ts
frontend/src/types/: api.ts  index.ts
scripts/: generate-openapi.py  setup-dev.sh
src/agent_orchestrator/: __init__.py  __main__.py  config.py
src/agent_orchestrator/api/: __init__.py  app.py  dependencies.py
src/agent_orchestrator/api/middleware/: error_handler.py
src/agent_orchestrator/api/routes/: agents.py  conversations.py  files.py  health.py  tasks.py  websocket.py  workflows.py
src/agent_orchestrator/api/schemas/: __init__.py  requests.py  responses.py
src/agent_orchestrator/api/static/: index.html
src/agent_orchestrator/api/static/assets/: index-3Bn3Nlid.js  index-B88O8Lou.js  index-B90yBPEL.js  index-BHpiksEq.js  index-BL_exx7p.css  index-C-VwZBNc.css  index-C1DQz-WP.css  index-C63Kqwg4.js  index-CJZu5K2L.css  index-DNdLD649.js  index-DP3EgbEq.css  index-DPQjQx8Y.css  index-Dl1RRuU8.css  index-Dw49pjIj.js
src/agent_orchestrator/cli/: __init__.py  main.py
src/agent_orchestrator/core/agents/: __init__.py  definition.py  runtime.py  tools.py
src/agent_orchestrator/core/conversation/: __init__.py  session.py
src/agent_orchestrator/core/document/: __init__.py  parser.py
src/agent_orchestrator/core/events/: __init__.py  models.py  store.py
src/agent_orchestrator/core/orchestration/: orchestrator.py  supervisor.py
src/agent_orchestrator/core/workflows/: __init__.py  engine.py  models.py  saga.py
src/agent_orchestrator/infrastructure/cache/: __init__.py  redis_client.py
src/agent_orchestrator/infrastructure/llm/: __init__.py  client.py  embeddings.py
src/agent_orchestrator/infrastructure/messaging/: __init__.py  nats_client.py
src/agent_orchestrator/infrastructure/observability/: __init__.py  logging.py  telemetry.py
src/agent_orchestrator/infrastructure/persistence/: __init__.py  database.py  models.py  repositories.py
src/agent_orchestrator/infrastructure/storage/: __init__.py  object_store.py
src/agent_orchestrator/workers/: __init__.py  agent_worker.py  result_handler.py  workflow_worker.py
tests/: __init__.py  conftest.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_api.py
tests/unit/core/: __init__.py  test_agents.py  test_tools.py  test_workflows.py
(+19 files in other folders)
